--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,4 @@ name: SDAntiCraft
 version: '${project.version}'
 main: co.shanedev.sdanticraft.SDAntiCraft
 api-version: '1.20'
+author: 'SD - ShaneDev'
